# scigen

./: .gitignore  README.md
backend/: .env.template  Dockerfile  app.py  pyproject.toml
backend/app/: server.py
backend/app/agents/: introduction_graph.py  master.py  researcher.py
backend/app/agents/prompts/: base.py  introduction.py  introduction_feedback.py
backend/app/agents/state/: master.py
backend/app/chains/: meta_data_chain.py
backend/app/common/: base_service.py
backend/app/document/: document.py
backend/app/document/service/: upload_service.py
backend/app/graph/prompts/: introduction.py  introduction_feedback.py
backend/app/paper/: paper.py
backend/app/services/: grobid.py  nougat.py  semantic_scholar.py  text_splitter.py  weaviate.py
backend/notebooks/: text-splitter.ipynb
backend/notebooks/data/: sulayman_corona.txt
backend/notebooks/paper/: Covid-19 Forschungskollaboration.pdf.txt  Covid-19 Research Impact.pdf.txt  change_in_research_1_search_response.txt  fith_section.txt  fith_section_search_response.txt  fourth_section.txt  fourth_section_search_response.txt  introduction.txt  introduction_search.txt  paper-test.ipynb  second_section.txt  second_section_search_response.txt  seventh_section_search_response.txt  sixth_section.txt  sixth_section_search_response.txt  sulayman_corona.pdf.txt  third_section.txt  third_section_search_response.txt  toc.txt
backend/notebooks/paper copy/: Sample2. Understanding_Knowledge_Sharing_Activities_in_Free.pdf.txt  TrialRun.md  paper-test.ipynb  test.html
backend/notebooks/text-splitter/: text-splitter.ipynb
backend/scripts/: ceurws.py  load_wiki_data_to_db.py
backend/services/: nougat.py  text_splitter.py
backend/streamlit/: app.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: sidebar.vue
frontend/src/i18n/: en.json  index.ts
frontend/src/stores/: settings.ts
frontend/src/views/: HomeView.vue
