[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Philipp Hertweck <philipp.hertweck@ocki-software.de>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["all"], version = ">=0.0.30"}
pydantic = "<2"
langchain-openai = "^0.0.8"
python-decouple = "^3.8"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
