[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Philipp Hertweck <philipp.hertweck@ocki-software.de>"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "streamlit" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
pydantic = "^2.5.0"
langchain-openai = "^0.0.8"
python-decouple = "^3.8"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
langchain-text-splitters = "^0.0.1"
streamlit = "^1.32.2"
markdown = "^3.6"
watchdog = "^4.0.0"
ipykernel = "^6.29.4"
nltk = "^3.8.1"
tabulate = "^0.9.0"
tiktoken = "^0.6.0"
scikit-learn = ">=1.4"
matplotlib = "^3.8.3"
semantic-text-splitter = "^0.8.1"
semantic-split = "^0.1.0"
weaviate-client = "^4.5.5"
autopep8 = "^2.1.0"
semanticscholar = "^0.8.0"
langserve = "^0.0.51"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[tool.poetry.scripts]
serve = "app.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
